--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,6 +33,7 @@ subjects:
 - !lcsh 'Questions and answers -- Periodicals'
 - !lcc 'AG'
 - !lcsh 'Indexes'
+- GITenberg
 title: "Notes and Queries, Index of Volume 3, January-June, 1851\r\nA Medium of Inter-communication\
   \ for Literary Men, Artists, Antiquaries, Genealogists, etc."
 url: http://www.gutenberg.org/ebooks/26770
